fix alignement

--- a/themes/harmony/styles/thankyou.scss
+++ b/themes/harmony/styles/thankyou.scss
@@ -191,6 +191,7 @@
         .data-item {
           display: flex;
           justify-content: space-between;
+          align-items: center;
 
           span {
             font-size: 10px;
